--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,22 @@
 #root{
     margin-top: 2.5rem;
 }
+
+.black-gradient {
+    background: #000000; /* fallback for old browsers */
+    background: -webkit-linear-gradient(
+      to right,
+      #434343,
+      #000000
+    ); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(
+      to right,
+      #434343,
+      #000000
+    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  }
+
+.vertical-timeline::before {
+  /* this is the vertical line */
+  background: #94ACE0 !important;
+}
